--- a/styles.css
+++ b/styles.css
@@ -258,4 +258,13 @@ button[type="submit"] {
       width: 100%; /* Modify the width as needed */
       max-width: 400px; /* Set a maximum width to limit expansion on larger screens */
     }
+
+    .membership-table {
+      font-size: 14px;
+    }
+  
+    .membership-table th,
+    .membership-table td {
+      padding: 6px;
+    }
   }
