--- a/styles.css
+++ b/styles.css
@@ -128,8 +128,9 @@ body {
 // about us section
 
 #about {
-  height: 100vh;
+ // height: 100vh;
   color: #fff; /* Set the text color to white */
+  padding: 0 20px; /* Add padding to create space on both sides */
 }
 
 .about-section {
@@ -140,8 +141,10 @@ body {
 }
 
 .about-content {
-  text-align: justify;
-  max-width: 800px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  //max-width: 800px;
   margin: 0 auto;
 }
 
@@ -178,6 +181,7 @@ body {
 
 #contact {
   height: 100vh;
+  padding: 0 20px; /* Add padding to create space on both sides */
 }
 
 .contact-section {
@@ -190,10 +194,16 @@ body {
 .contact-content {
   max-width: 800px;
   margin: 0 auto;
+  width: 90%;
+  align-items: center;
+
+
 }
 
 .form-group {
   margin-bottom: 20px;
+  align-items: center;
+
 }
 
 label {
@@ -250,13 +260,7 @@ button[type="submit"] {
     }
   
     .about-content {
-      width: 60%;
-    }
-
-
-    textarea {
-      width: 100%; /* Modify the width as needed */
-      max-width: 400px; /* Set a maximum width to limit expansion on larger screens */
+      width: 80%;
     }
 
     .membership-table {
@@ -265,6 +269,14 @@ button[type="submit"] {
   
     .membership-table th,
     .membership-table td {
-      padding: 6px;
+      padding: 8px;
+    }
+
+    // contact us form
+
+    #contact .contact-content {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 10px;
     }
   }
