--- a/styles.css
+++ b/styles.css
@@ -128,7 +128,7 @@ body {
 // about us section
 
 #about {
- // height: 100vh;
+  height: 100vh;
   color: #fff; /* Set the text color to white */
   padding: 0 20px; /* Add padding to create space on both sides */
 }
@@ -144,8 +144,9 @@ body {
   text-align: center;
   align-items: center;
   justify-content: center;
-  //max-width: 800px;
+  max-width: 800px;
   margin: 0 auto;
+  width: 90%;
 }
 
 #about a {
